--- a/parserxmljava/pom.xml
+++ b/parserxmljava/pom.xml
@@ -39,6 +39,11 @@
 					<reportPlugins>
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<version>2.8.1</version>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-jxr-plugin</artifactId>
 							<version>2.1</version>
 						</plugin>
@@ -51,6 +56,9 @@
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-pmd-plugin</artifactId>
 							<version>2.4</version>
+							<configuration>
+								<targetJdk>1.7</targetJdk>
+							</configuration>
 						</plugin>
 					</reportPlugins>
 				</configuration>
